# Noteva

./: .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  check_output.txt  config.example.yml  docker-compose.yml  hook-registry.json  install.sh  package.json
.github/.github/: FUNDING.yml
.github/.github/workflows/: docker.yml  release.yml
.github/workflows/: build-demo.yml  ci.yml  release.yml
docs/: api.md  plugin-development.md  theme-development.md  主题开发文档.md  插件开发文档.md
docs/demos/: 1-bento-grid.html  2-glassmorphism.html  3-neubrutalism.html  4-magazine.html  5-dark-micro.html  6-fusion.html
docs/schemas/: plugin-settings.schema.json  plugin.schema.json  theme-settings.schema.json  theme.schema.json
plugins/hide-until-reply/: frontend.css  frontend.js  plugin.json  settings.json
plugins/music-player/: frontend.css  frontend.js  plugin.json  settings.json
src/: lib.rs  main.rs
src/api/: about.rs  admin.rs  archive.rs  articles.rs  auth.rs  cache.rs  captcha.rs  categories.rs  comments.rs  common.rs  friend_links.rs  github_update.rs  locales.rs  middleware.rs  mod.rs  nav.rs  noteva-sdk.js  pages.rs  plugin_install.rs  plugins.rs  proxy.rs  responses.rs  seo.rs  site.rs  static_files.rs  tags.rs  theme.rs  theme_install.rs  two_factor.rs  upload.rs
src/api/admin/: ai.rs  backup.rs  comments.rs  dashboard.rs  files.rs  mod.rs  reload.rs  security.rs  settings.rs  taxonomy.rs  themes.rs  update.rs
src/cache/: memory.rs  mod.rs  redis.rs
src/config/: mod.rs  property_tests.rs  tests.rs
src/db/: macros.rs  migrations.rs  mod.rs  pool.rs
src/db/repositories/: article.rs  category.rs  comment.rs  friend_link.rs  mod.rs  nav_item.rs  page.rs  plugin_data.rs  plugin_state.rs  session.rs  settings.rs  tag.rs  user.rs
src/db/repositories/article/: mod.rs  mysql_impl.rs  sqlite_impl.rs  tests.rs
src/models/: about.rs  article.rs  category.rs  comment.rs  friend_link.rs  mod.rs  nav_item.rs  page.rs  session.rs  tag.rs  user.rs
src/plugin/: doc_gen.rs  hook_registry.rs  hooks.rs  loader.rs  mod.rs  plugin_db.rs  shortcode.rs  tests.rs  validation.rs  wasm_bridge.rs
src/services/: about.rs  article.rs  backup.rs  captcha_pow.rs  category.rs  comment.rs  email.rs  emoji.rs  friend_link.rs  locale.rs  markdown.rs  mod.rs  nav_item.rs  page.rs  password.rs  rate_limiter.rs  settings.rs  tag.rs  user.rs
src/services/article/: mod.rs  tests.rs
src/theme/: error.rs  mod.rs  tests.rs  validation.rs
themes/default/: index.html  package.json  pnpm-lock.yaml  settings.json  tailwind.config.ts  theme.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
themes/default/public/: noteva-sdk.css  noteva-sdk.js
themes/default/src/: App.tsx  main.tsx
themes/default/src/app/: globals.css  layout.tsx  page.tsx
themes/default/src/components/: article-summary-card.tsx  comments.tsx  emoji-picker.tsx  language-switcher.tsx  music-player.tsx  plugin-slot.tsx  site-footer.tsx  site-header.tsx  theme-provider.tsx  theme-switcher.tsx  toc-sidebar.tsx
themes/default/src/hooks/: useNoteva.ts  useSeoMeta.ts
themes/default/src/lib/: articles.ts  motion.ts
themes/default/src/pages/: about.tsx  archives.tsx  categories.tsx  custom-page.tsx  friend-links.tsx  home.tsx  post.tsx  tags.tsx
themes/default/src/types/: noteva-sdk.d.ts
uploads/: .gitkeep
web/: index.html  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/manage/: layout.tsx  page.tsx
web/src/components/: language-switcher.tsx  settings-renderer.tsx  site-footer.tsx  site-header.tsx
web/src/components/admin/: confirm-dialog.tsx  data-sync-bar.tsx  page-header.tsx  version-status.tsx
web/src/components/motion/: animated-card.tsx  animated-list.tsx  index.ts  page-transition.tsx
web/src/lib/: ai-prompts.ts  api-error.ts  api.ts  content-primitives.ts  emoji-data.ts  format.ts  github.ts  manage-motion.ts  manage-routes.ts  sanitize-html.ts  utils.ts
(+107 files in other folders)
